1과제/k8s/fargate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fargate-ingress
  namespace: ec2-fargate
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: wsi-alb  # 단일 ALB 이름
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080}]'
    alb.ingress.kubernetes.io/healthcheck-path: "/healthz"
    alb.ingress.kubernetes.io/subnets: subnet-0c0f55345684d9ed8, subnet-055f450c8bcb99263
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: alb
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /v1/dummy
            pathType: Prefix
            backend:
              service:
                name: fargate-service-a
                port:
                  number: 8080
          - path: /v1/dummy
            pathType: Prefix
            backend:
              service:
                name: fargate-service-b
                port:
                  number: 8080
